# blade

./: .gitattributes  .gitignore  .gitmodules  BUGS.md  BUILDING.md  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  bird.vcxproj  bird.vcxproj.filters  birdy.mk  birdy.mk.backup  qi
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml  c-cpp.yml.backup  ci.yml  codeql.yml  linux-build.yml  osx-build.yml  release.yml  windows-build.yml  windows-mingw64-build.yml  windows-msvc-build.yml  windows-msvc-build.yml.backup  windows-winlibs-build.yml
apps/nyssa/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.b  nyssa.json
apps/nyssa copy/: nyssa.json
apps/nyssa copy/app/: log.b  setup.b
apps/nyssa copy/docs/: cleaning-cache-and-logs.md  hosting-a-private-repository.md  install-and-uninstall-actions.md  publishers-account.md  publishing-packages.md  test-globals.md
apps/nyssa copy/public/: site.webmanifest
apps/nyssa copy/templates/: 404.html  account.html  change_password.html  home.html  search.html  view.html
apps/nyssa/app/: config.b  index.b  log.b  package.b  publisher.b  setup.b  util.b
apps/qi/: .gitignore  README.md
apps/qi/app/: lib.b
benchmarks/: bench-1.b  bench-2.b  bench-3.b  bench-4.b  bench-6.b  bench-7.b  bench-binary-tree-2.b  bench-binary-tree-3.b  bench-binary-tree.b  bench-dispatch.b  bench-fannkuchredux.b  bench-list.b  bench-mandlebrot.b  bench-method-call.b  bench-method-call.py  bench-nbody.b  bench-permute.b  bench-pidigits.b  bench-queens.b  bench-reverse-complement-2.b  bench-reverse-complement.b  bench-richards.b  bench-sieve.b  bench-simple.b  bench-solitaire.b  bench-spectral-norm-2.b  bench-spectral-norm.b
bins/: nyssa  nyssa.cmd
birdy-vscode-ext/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
birdy-vscode-ext/syntaxes/: bird.tmLanguage.json  birdy.tmLanguage.json
docs/: .gitignore  conf.py  index.rst  requirements.txt
examples/: arm_jit.b  smtp_mail.b  socket.b  vim.b
exts/: CMakeLists.txt
exts/sqlite/: CMakeLists.txt
libs/: README  _builtin.stub.b  _bytes.b  _bytes.stub.b  _core.b  _dict.b  _dict.stub.b  _file.stub.b  _list.b  _list.stub.b  _range.b  _range.stub.b  _string.b  _string.stub.b  _string.sub.b  args.b  array.b  base64.b  bcrypt.b  bigint.b  clib.b  colors.b  convert.b  date.b  enum.b  hash.b  http.b  http2.b  io.b  iters.b  log.b  math.b  mime.b  number.b.backup  os.b  process.b  reflect.b  set.b  set.draft.b  sha3.b  (+11 more)
libs/array/: _base.b  double.b  float.b  index.b  int16.b  int32.b  int64.b  uint16.b  uint32.b  uint64.b
libs/ast/: decl.b  defn.b  exception.b  expr.b  index.b  interface.b  parser.b  scanner.b  stmt.b  token.b
libs/hash/: blake.b  checksum.b  cipher.b  index.b  mac.b  sha.b  sha3.b
libs/html/: entities.b  format.b  html.b  index.b  lexer.b  parser.b  tags.b
libs/http/: _process.b  client.b  defaults.b  exception.b  index.b  request.b  response.b  server.b  status.b  tls_server.b  util.b
libs/http2/: client.b  index.b  request.b  response.b  server.b  status.b
libs/http_curl/: client.b  exception.b  index.b  request.b  response.b  server.b  status.b
libs/io/: bytesio.b  index.b  tty.b
libs/json/: decoder.b  encoder.b  index.b
libs/mail/: constants.b  imap.b  index.b  message.b  pop3.b  smtp.b
libs/markdown/: README.md  config.b  index.b  parser_block.b  parser_core.b  parser_inline.b  renderer.b  ruler.b  token.b
libs/os/: dir.b  index.b
libs/sqlite/: cursor.b  exception.b  index.b
libs/template/: constants.b  functions.b  index.b
libs/thread/: channel.b  index.b  mutex.b  semaphore.b  thread.b
scripts/: ast.b  autoinstall-linux.sh  autoinstall-osx.sh  autoinstall.sh  install.sh  ir2c.b  linux-autoinstall.sh  make_blade.b
src/: b_asprintf.h  b_dict.c  b_dict.h  b_endian.h  b_file.c  b_file.h  b_getopt.c  b_getopt.h  b_list.c  b_list.h  b_sprintf.h  b_string.c  b_string.h  b_time.h  b_unistd.h  bgetopt.c  bird.c  blade.c  blade_dict.c  blade_dict.h  blade_dlfcn.h  blade_endian.h  blade_file.c  blade_file.h  blade_getopt.c  blade_getopt.h  blade_list.c  blade_list.h  blade_range.c  blade_sprintf.h  blade_string.c  blade_string.h  blade_termios.h  blade_time.h  blade_unistd.h  blob.c  blob.h  bstring.c  bstring.h  bunistd.h  (+42 more)
src/builtin/: dict.c  list.c
src/core/: bird.c  blob.h  btime.h  bytes.c  common.h  compiler.c  compiler.h  config.h  debug.c  debug.h  dict.c  file.c  getopt.c  list.c  memory.c  memory.h  module.c  module.h  native.c  native.h  object.c  object.h  pathinfo.c  pathinfo.h  scanner.c  scanner.h  string.c  table.c  table.h  util.c  util.h  value.c  value.h  vm.c  vm.h  win32.c  win32.h
src/dirent/: dirent.h
src/includes/: blob.h  bstring.h  btime.h  common.h  compiler.h  config.h  debug.h  dict.h  memory.h  module.h  native.h  object.h  pathinfo.h  scanner.h  table.h  time.h  util.h  value.h  vm.h  win32.h
src/modules/: base64.c  date.c  date.h  http.c  http.h  io.c  io.h  math.c  mtime.c  mtime.h  os.c  os.h  socket.c
src/pcre/: config.h  pcre2.h
src/standard/: _json.h  _sqlite.h  array.c  base64.c  base64.h  date.c  date.h  hash.c  hash.h  http.c  io.c  io.h  json.c  math.c  math.h  os.c  os.h  process.c  reflect.c  socket.c  socket.h  sqlite.c  standard.h  struct.c  thread.c
tests/: CMakeLists.txt  anonymous.b  anonymous2.b  assert.b  bytes.b  catch_in_class.b  class.b  closure.b  condition.b  custom_exception.b  dictionary.b  die.b  do.b  errors.b  fib.b  file.b  for.b  function.b  if.b  import.b  io.b  io_test.b  iter.b  list.b  logarithm.b  native.b  operators.b  pi.b  range.b  scope.b  string.b  try.b  urshift.b  using.b  var.b  while.b
tests/libs/: bigint.b  c_closures.b  clib.b  date.b  enum.b  hash.b  http.b  http2.b  imagine.b  json_encode.b  log.b  mail_parse.b  markdown1.b  process.b  reflect_closure.b  socket.b  struct.b  threads.b  threads2.b  threads3.b  threads_cancel.b  threads_channel.b  threads_http.b  zlib1.b
winbuild/: bird.sln  bird.vcxproj  bird.vcxproj.filters  install-dependency.bat
(+174 files in other folders)
